4-eks/aline-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aline

# kubectl create namespace aline
