4-eks/mysql-en.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: alinedb.cdz8rwvnckez.us-west-1.rds.amazonaws.com
